wip: checkpoint shared AI, pathfinding, and runtime systems